--- a/style.css
+++ b/style.css
@@ -1,3 +1,105 @@
 body {
     font-family: Helvetica, sans-serif
 }
+
+.card_section { 
+    display:flex;
+    justify-content: space-between;
+    margin: 5vw 10vw 15vw
+}
+
+.rect_cont1 {
+    background-color: rgb(34, 79, 239);
+    width: 15vw;
+    height:15vw;
+    border-radius: 15%;
+}
+
+.img_cont_dollar{
+    width:10vw;
+    height: 10vw;
+    display:flex;
+    justify-content:center;
+    margin-left:2.5vw;
+}
+
+.img_cont_dollar >img {
+    width:100%;
+    height:100%;
+    clip-path: circle(25.2% at 50% 51%)
+}
+
+.dollar_label {
+    color:white;
+    font-size:1.5em;
+    text-align: center;
+}
+
+.rect_cont2 {
+    width: 15vw;
+    height:15vw;
+    border-radius: 15%;
+    display:flex;
+    flex-direction: column;
+    align-items:center;
+    border: 2px solid rgb(223, 221, 221);
+}
+
+.bi.bi-person {
+    margin-top: 1.25vw;
+    margin-bottom: 1.25vw;
+    width:7.5vw;
+    height: 7.5vw;
+}
+
+.retain_label {
+    color:black;
+    font-size:1.5em;
+    text-align: center;
+}
+
+.rect_cont3 {
+    width: 15vw;
+    height:15vw;
+    border-radius: 15%;
+    display:flex;
+    flex-direction: column;
+    align-items:center;
+    border: 2px solid rgb(223, 221, 221);
+}
+
+.bi.bi-bar-chart {
+    margin-top: 1.25vw;
+    margin-bottom: 1.25vw;
+    width:7.5vw;
+    height: 7.5vw;
+}
+
+.reporting_label {
+    color:black;
+    font-size:1.5em;
+    text-align: center;
+}
+
+.rect_cont4 {
+    width: 15vw;
+    height:15vw;
+    border-radius: 15%;
+    display:flex;
+    flex-direction: column;
+    align-items:center;
+    border: 2px solid rgb(223, 221, 221);
+}
+
+.bi.bi-arrow-left-right {
+    margin-top: 1.25vw;
+    margin-bottom: 1.25vw;
+    width:7.5vw;
+    height: 7.5vw;
+}
+
+.convert_label {
+    color:black;
+    font-size:1.5em;
+    text-align: center;
+}
