--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 .focuscard {
     display: flex;
     width: 750px;
-    height: 375px;
+    height: 340px;
 }
 
 .focustext {
@@ -34,6 +34,7 @@ body {
 
 .focustextbuttons {
     display: flex;
+    margin-bottom: 6px;
 }
 
 #focussignup {
@@ -95,7 +96,7 @@ body {
     /* display: flex;
     flex-wrap: wrap; */
     filter: drop-shadow(2mm 2mm 2mm rgb(217, 217, 217));
-    font-size: 7px;
+    font-size: 8px;
 }
 
 .focusgrid div {
