--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 .card_section { 
     display:flex;
     justify-content: space-between;
-    margin: 5vw 10vw 15vw
+    margin: 5vw 10vw 10vw
 }
 
 .rect_cont1 {
@@ -102,4 +102,40 @@ body {
     color:black;
     font-size:1.5em;
     text-align: center;
+}
+
+#credit_cont {
+    border-radius: 15px;
+    overflow: hidden;
+    display:flex;
+    align-items: center;
+}
+
+
+.credit_img_cont {
+    width:90%;
+    height:40%;
+    display:flex;
+    align-items: center
+}
+
+
+
+
+#credit_card_right {
+    color:white;
+    background-color: rgb(34, 79, 239);
+    padding-top:10vh;
+    padding-bottom:10vh;
+    padding-right: 10vh;
+    padding-left:3vh;
+}
+
+.bottom_right_cr {
+    list-style: none;
+    font-size: 0.8em;
+    padding:0px;
+}
+.bottom_right_cr > li{
+    margin-bottom:2vh
 }
