--- a/style.css
+++ b/style.css
@@ -4,23 +4,26 @@ body {
 
 .card_section { 
     display:flex;
-    justify-content: space-between;
-    margin: 5vw 10vw 10vw
+    justify-content: space-around;
+    margin: 5vw 10vw 10vw;
+    flex-wrap: wrap;
+    row-gap: 4vh
 }
+
 
 .rect_cont1 {
     background-color: rgb(34, 79, 239);
-    width: 15vw;
-    height:15vw;
+    width: 30vw;
+    height:30vw;
     border-radius: 15%;
 }
 
 .img_cont_dollar{
-    width:10vw;
-    height: 10vw;
+    width:20vw;
+    height: 20vw;
     display:flex;
     justify-content:center;
-    margin-left:2.5vw;
+    margin-left:5vw;
 }
 
 .img_cont_dollar >img {
@@ -31,13 +34,13 @@ body {
 
 .dollar_label {
     color:white;
-    font-size:1.5em;
+    font-size: 3vw;
     text-align: center;
 }
 
 .rect_cont2 {
-    width: 15vw;
-    height:15vw;
+    width: 30vw;
+    height:30vw;
     border-radius: 15%;
     display:flex;
     flex-direction: column;
@@ -46,21 +49,21 @@ body {
 }
 
 .bi.bi-person {
-    margin-top: 1.25vw;
-    margin-bottom: 1.25vw;
-    width:7.5vw;
-    height: 7.5vw;
+    margin-top: 2.5vw;
+    margin-bottom: 2.5vw;
+    width:15vw;
+    height: 15vw;
 }
 
 .retain_label {
     color:black;
-    font-size:1.5em;
+    font-size:3vw;
     text-align: center;
 }
 
 .rect_cont3 {
-    width: 15vw;
-    height:15vw;
+    width: 30vw;
+    height:30vw;
     border-radius: 15%;
     display:flex;
     flex-direction: column;
@@ -69,21 +72,21 @@ body {
 }
 
 .bi.bi-bar-chart {
-    margin-top: 1.25vw;
-    margin-bottom: 1.25vw;
-    width:7.5vw;
-    height: 7.5vw;
+    margin-top: 2.5vw;
+    margin-bottom: 2.5vw;
+    width:15vw;
+    height: 15vw;
 }
 
 .reporting_label {
     color:black;
-    font-size:1.5em;
+    font-size:3vw;
     text-align: center;
 }
 
 .rect_cont4 {
-    width: 15vw;
-    height:15vw;
+    width: 30vw;
+    height:30vw;
     border-radius: 15%;
     display:flex;
     flex-direction: column;
@@ -92,16 +95,121 @@ body {
 }
 
 .bi.bi-arrow-left-right {
-    margin-top: 1.25vw;
-    margin-bottom: 1.25vw;
-    width:7.5vw;
-    height: 7.5vw;
+    margin-top: 2.5vw;
+    margin-bottom: 2.5vw;
+    width:15vw;
+    height: 15vw;
 }
 
 .convert_label {
     color:black;
-    font-size:1.5em;
+    font-size:3vw;
     text-align: center;
+}
+
+@media (min-width:768px) {
+    .card_section { 
+        display:flex;
+        justify-content: space-between;
+        margin: 5vw 10vw 10vw
+    }
+    
+    
+    .rect_cont1 {
+        background-color: rgb(34, 79, 239);
+        width: 15vw;
+        height:15vw;
+        border-radius: 15%;
+    }
+    
+    .img_cont_dollar{
+        width:10vw;
+        height: 10vw;
+        display:flex;
+        justify-content:center;
+        margin-left:2.5vw;
+    }
+    
+    .img_cont_dollar >img {
+        width:100%;
+        height:100%;
+        clip-path: circle(25.2% at 50% 51%)
+    }
+    
+    .dollar_label {
+        color:white;
+        font-size: 1.5vw;
+        text-align: center;
+    }
+    
+    .rect_cont2 {
+        width: 15vw;
+        height:15vw;
+        border-radius: 15%;
+        display:flex;
+        flex-direction: column;
+        align-items:center;
+        border: 2px solid rgb(223, 221, 221);
+    }
+    
+    .bi.bi-person {
+        margin-top: 1.25vw;
+        margin-bottom: 1.25vw;
+        width:7.5vw;
+        height: 7.5vw;
+    }
+    
+    .retain_label {
+        color:black;
+        font-size:1.5vw;
+        text-align: center;
+    }
+    
+    .rect_cont3 {
+        width: 15vw;
+        height:15vw;
+        border-radius: 15%;
+        display:flex;
+        flex-direction: column;
+        align-items:center;
+        border: 2px solid rgb(223, 221, 221);
+    }
+    
+    .bi.bi-bar-chart {
+        margin-top: 1.25vw;
+        margin-bottom: 1.25vw;
+        width:7.5vw;
+        height: 7.5vw;
+    }
+    
+    .reporting_label {
+        color:black;
+        font-size:1.5vw;
+        text-align: center;
+    }
+    
+    .rect_cont4 {
+        width: 15vw;
+        height:15vw;
+        border-radius: 15%;
+        display:flex;
+        flex-direction: column;
+        align-items:center;
+        border: 2px solid rgb(223, 221, 221);
+    }
+    
+    .bi.bi-arrow-left-right {
+        margin-top: 1.25vw;
+        margin-bottom: 1.25vw;
+        width:7.5vw;
+        height: 7.5vw;
+    }
+    
+    .convert_label {
+        color:black;
+        font-size:1.5vw;
+        text-align: center;
+    }
 }
 
 #credit_cont {
@@ -113,13 +221,20 @@ body {
 
 
 .credit_img_cont {
-    width:90%;
-    height:40%;
+    width:70%;
+    margin: 3vh 0px;
     display:flex;
     align-items: center
 }
 
-
+@media (min-width:768){
+    .credit_img_cont {
+        width:90%;
+        height:40%;
+        display:flex;
+        align-items: center
+    }
+}
 
 
 #credit_card_right {
@@ -135,7 +250,9 @@ body {
     list-style: none;
     font-size: 0.8em;
     padding:0px;
+    margin-bottom: 4vh;
 }
+
 .bottom_right_cr > li{
     margin-bottom:2vh
 }
