--- a/style.css
+++ b/style.css
@@ -221,10 +221,10 @@ body {
 
 
 .credit_img_cont {
-    width:70%;
-    margin: 3vh 0px;
+    width:90%;
+    margin: 5vh 0px;
     display:flex;
-    align-items: center
+    align-items: center;
 }
 
 @media (min-width:768){
@@ -232,7 +232,6 @@ body {
         width:90%;
         height:40%;
         display:flex;
-        align-items: center
     }
 }
 
@@ -255,4 +254,8 @@ body {
 
 .bottom_right_cr > li{
     margin-bottom:2vh
+}
+
+.heading_solutions {
+    margin-top: 10vh;
 }
