--- a/style.css
+++ b/style.css
@@ -96,7 +96,9 @@ body {
     /* display: flex;
     flex-wrap: wrap; */
     filter: drop-shadow(2mm 2mm 2mm rgb(217, 217, 217));
-    font-size: 8px;
+    font-size: 9.1px;
+    text-align: center;
+    padding: 0;
 }
 
 .focusgrid div {
@@ -108,6 +110,12 @@ body {
 .focusgrid .col {
     height: 80%;
     justify-content: center;
+}
+
+.grid-a, .grid-b, .grid-c, .grid-d, .grid-e, .grid-f, .grid-g, .grid-h, .grid-i {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
 }
 
 .grid-a {
@@ -159,4 +167,8 @@ body {
     color: white;
     background-color: rgb(34, 79, 239);
     border-radius:0 0 50% 0; 
+}
+
+.dark-fill {
+    color: black;
 }
