--- a/extra_pages/css/signup-secondary.css
+++ b/extra_pages/css/signup-secondary.css
@@ -34,7 +34,12 @@ flex-wrap: wrap
 
 .imput-icons {
     display: grid;
-gap: 35px;
-transform: translate(-290px,-40px);
+gap: 30px;
+transform: translate(-298px,-48px);
 padding: 3px;
+}
+
+.blue-background {
+max-width: 500px;
+max-height: 400px;
 }
