Adjusted sign-up picture size

--- a/css/signup-secondary.css
+++ b/css/signup-secondary.css
@@ -39,7 +39,6 @@ transform: translate(-298px,-48px);
 padding: 3px;
 }
 
-.blue-background {
-max-width: 500px;
-max-height: 400px;
+.main-pic1{
+    max-width: 500px;
 }
